[package]
name = "ergo-signer"
version = "0.1.0"
edition = "2021"
description = "Minimal Ergo transaction signing HTTP service for BlockHost"

[dependencies]
ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust.git", features = ["json"] }
ergotree-ir = { git = "https://github.com/ergoplatform/sigma-rust.git" }
ergotree-interpreter = { git = "https://github.com/ergoplatform/sigma-rust.git" }
ergo-chain-types = { git = "https://github.com/ergoplatform/sigma-rust.git", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[dependencies.blake2]
version = "0.10"

[[bin]]
name = "ergo-signer"
path = "src/main.rs"

[[bin]]
name = "ergo-peers"
path = "src/peers.rs"
